--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tauri-apps/api": "^1.2.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.3.1",
+    "fuse.js": "^6.6.2",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
